--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,6 +1,6 @@
-html {
-    margin-left: 10%;
-    margin-right: 10%;
+main {
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
 header {
@@ -15,6 +15,7 @@ header {
 .logo {
     width: 15%;
     margin-top: 100px; 
+    margin-left: 5%;
 }
 
 main {
