--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,9 @@
-
-
 header {
     background-color: #4ea0fd;
     background-image: url(../img/pattern.png); 
     width: 100%;
     height: 200px; 
     box-sizing: border-box;
-    
 }
 
 .logo {
@@ -54,30 +51,40 @@ table {
     border-spacing: 0;
 }
 
-#thead {
+#th1 {
     background-color: #20A9E5;
     color: #ffffff;
+    width: 25%;
+}
+
+#th2 {
+    background-color: #20A9E5;
+    color: #ffffff;
+    width: 25%;
+}
+
+#th3 {
+    background-color: #20A9E5;
+    color: #ffffff;
+    width: 50%;
 }
 
 #tr1 {
     background-color: #b1e5f2;
-    line-height: 4em;
-    align-items: center;
-    
-    
+    line-height: 3em;
+    text-align: center;
 }
 
 #tr2 {
     background-color: #ffffff;
-    line-height: 4em;
-    align-items: center;
-    
+    line-height: 3em;
+    text-align: center;
 }
 
 #tr3 {
     background-color: #b1e5f2;
-    line-height: 4em;
-    align-items: center;
+    line-height: 3em;
+    text-align: center;
 }
 
 footer h3 {
